test/extern/ferguson/externblock/readme_example-error.good
readme_example-error.chpl:5: error: unresolved call 'ADD(1, 2)'
